--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -72,8 +72,10 @@
     <Compile Include="ContestPrize.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="NewsRubric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepoArticle.cs" />
+    <Compile Include="Repositories\RepoNewsRubric.cs" />
     <Compile Include="Repositories\RepoArticleType.cs" />
     <Compile Include="Repositories\RepoClick.cs" />
     <Compile Include="Repositories\RepoClickType.cs" />
