--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -156,7 +156,6 @@
     <Content Include="Content\dist\i\footer-bg-md.jpg" />
     <Content Include="Content\dist\i\footer-bg-sm.jpg" />
     <Content Include="Content\dist\i\footer-bg-xs.jpg" />
-    <Content Include="Content\dist\i\temp\48ce50da-eac8-11e5-9308-94708ff8d766.jpg" />
     <Content Include="Content\dist\js\ge-for-gamers-block.min.js" />
     <Content Include="Content\dist\js\ge-last-news-block.min.js" />
     <Content Include="Content\dist\js\jquery.validate.min.js" />
@@ -357,6 +356,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\dist\i\temp\" />
     <Folder Include="Content\less\" />
     <Folder Include="Views\Seo\" />
   </ItemGroup>
