--- a/GE.WebAdmin/Web.config
+++ b/GE.WebAdmin/Web.config
@@ -34,6 +34,14 @@
     <sessionState timeout="40"/>
     <customErrors mode="Off"/>
   </system.web>
+  <system.webServer>
+	<staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+	</staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
