--- a/GE.WebUI/Views/web.config
+++ b/GE.WebUI/Views/web.config
@@ -20,6 +20,7 @@
         <add namespace="GE.WebCoreExtantions"/>
         <add namespace="GE.WebUI.Models" />
         <add namespace="SX.WebCore.HtmlHelpers"/>
+        <add namespace="SX.WebCore.ViewModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
