--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Providers\QueryProvider.cs" />
     <Compile Include="Repositories\RepoLike.cs" />
     <Compile Include="Repositories\RepoManual.cs" />
+    <Compile Include="Repositories\RepoMaterialCategory.cs" />
     <Compile Include="Repositories\RepoManualGroup.cs" />
     <Compile Include="Resources\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -164,6 +165,7 @@
     <Compile Include="SxLike.cs" />
     <Compile Include="SxManual.cs" />
     <Compile Include="SxManualGroup.cs" />
+    <Compile Include="SxMaterialCategory.cs" />
     <Compile Include="SxMaterialTag.cs" />
     <Compile Include="SxMenu.cs" />
     <Compile Include="SxMenuItem.cs" />
