--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -144,9 +144,10 @@
     <Compile Include="Managers\SxSeoWordCounter.cs" />
     <Compile Include="PictureHandler.cs" />
     <Compile Include="Providers\QueryProvider.cs" />
-    <Compile Include="Repositories\RepoLike.cs" />
     <Compile Include="Repositories\RepoManual.cs" />
     <Compile Include="Repositories\RepoMaterialCategory.cs" />
+    <Compile Include="Repositories\RepoLike.cs" />
+    <Compile Include="Repositories\RepoUserClick.cs" />
     <Compile Include="Resources\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -156,8 +157,6 @@
     <Compile Include="SxAppRole.cs" />
     <Compile Include="SxAppUser.cs" />
     <Compile Include="SxArticle.cs" />
-    <Compile Include="SxClickType.cs" />
-    <Compile Include="SxClick.cs" />
     <Compile Include="SxComment.cs" />
     <Compile Include="SxDbContext.cs" />
     <Compile Include="Enums.cs" />
@@ -181,6 +180,8 @@
     <Compile Include="SxSeoPhrase.cs" />
     <Compile Include="SxSiteMapUrl.cs" />
     <Compile Include="SxSiteSetting.cs" />
+    <Compile Include="SxUserClick.cs" />
+    <Compile Include="SxUserClickResult.cs" />
     <Compile Include="ViewModels\SxVMMaterialTag.cs" />
     <Compile Include="UrlHelper.cs" />
     <Compile Include="ViewModels\SxVMExternalLoginConfirmation.cs" />
