https://github.com/EugeneKormin/Game-exe/issues/58

--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -153,6 +153,7 @@
     <Content Include="Content\dist\js\menues.min.js" />
     <Content Include="Content\dist\js\routes.min.js" />
     <Content Include="Content\dist\js\site.min.js" />
+    <Content Include="Content\i\background.jpg" />
     <Content Include="img\alpha.png" />
     <Content Include="img\hue.png" />
     <Content Include="img\saturation.png" />
@@ -452,7 +453,6 @@
   <ItemGroup>
     <Folder Include="bin\" />
     <Folder Include="bower_components\" />
-    <Folder Include="Content\i\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
